# twirp-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SUPPORT.md  release-plz.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  create-release-pr.yml  publish-release.yml
crates/twirp/: CHANGELOG.md  Cargo.toml  README.md
crates/twirp-build/: CHANGELOG.md  Cargo.toml  README.md
crates/twirp-build/src/: lib.rs
crates/twirp/src/: body.rs  client.rs  client_error.rs  context.rs  details.rs  error.rs  headers.rs  lib.rs  mock.rs  server.rs  test.rs
example/: Cargo.toml  build.rs
example/proto/haberdash/v1/: haberdash_api.proto
example/proto/status/v1/: status_api.proto
example/src/: main.rs
script/: install-protoc  publish.sh
