[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
twirp = { path = "../crates/twirp" }

prost = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
twirp-build = { path = "../crates/twirp-build" }

fs-err = "3.1"
glob = "0.3.0"
prost-build = "0.14"
prost-wkt-build = "0.6"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple-server.rs"

[[bin]]
name = "advanced-server"
path = "src/bin/advanced-server.rs"
