[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
twirp = { path = "../crates/twirp" }

prost = "0.14"
prost-wkt = { git = "https://github.com/fdeantoni/prost-wkt/", rev = "06e6d142197d0ac93d636ea531c76b347206641c" }
prost-wkt-types = { git = "https://github.com/fdeantoni/prost-wkt/", rev = "06e6d142197d0ac93d636ea531c76b347206641c" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
http = "1.3"
http-body-util = "0.1"

[build-dependencies]
twirp-build = { path = "../crates/twirp-build" }

fs-err = "3.1"
glob = "0.3.0"
prost-build = "0.14"
prost-wkt-build = "0.6"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple-server.rs"

[[bin]]
name = "advanced-server"
path = "src/bin/advanced-server.rs"
