[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
twirp = { path = "../crates/twirp" }

prost = "0.14"
prost-wkt = "0.7"
prost-wkt-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
http = "1.4"
http-body-util = "0.1"

[build-dependencies]
twirp-build = { path = "../crates/twirp-build" }

fs-err = "3.2"
glob = "0.3.3"
prost-build = "0.14"
prost-wkt-build = "0.7"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "simple-server"
path = "src/bin/simple-server.rs"

[[bin]]
name = "advanced-server"
path = "src/bin/advanced-server.rs"
