[package]
name = "twirp-build"
version = "0.7.0"
edition = "2021"
description = "Code generation for async-compatible Twirp RPC interfaces."
readme = "README.md"
keywords = ["twirp", "prost", "protocol-buffers"]
categories = [
    "development-tools::build-utils",
    "network-programming",
    "asynchronous",
]
repository = "https://github.com/github/twirp-rs"
license = "MIT"
license-file = "./LICENSE"

[dependencies]
prost-build = "0.13"
prettyplease = { version = "0.2" }
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
