[package]
name = "twirp"
version = "0.7.0"
authors = ["The blackbird team <support@github.com>"]
edition = "2021"
description = "An async-compatible library for Twirp RPC in Rust."
readme = "README.md"
keywords = ["twirp"]
categories = ["network-programming"]
repository = "https://github.com/github/twirp-rs"

[features]
test-support = []

[dependencies]
async-trait = "0.1"
axum = "0.7"
futures = "0.3"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.5", default-features = false }
prost = "0.13"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", default-features = false }
tower = { version = "0.5", default-features = false }
url = { version = "2.5" }
