[package]
name = "twirp"
version = "0.10.1"
edition = "2021"
description = "An async-compatible library for Twirp RPC in Rust."
readme = "README.md"
keywords = ["twirp", "prost", "protocol-buffers"]
categories = [
    "development-tools::build-utils",
    "network-programming",
    "asynchronous",
]
repository = "https://github.com/github/twirp-rs"
license-file = "./LICENSE"

[features]
test-support = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.8", default-features = false }
prost = "0.14"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", default-features = false }
tower = { version = "0.5", default-features = false }
url = { version = "2.5" }
